dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-api-ingress
  namespace: dev
  labels:
    app: task-manager-api
    environment: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: task-manager-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-manager-api-svc
            port:
              number: 80
